kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shivam-hospital-ingress
  namespace: backend
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
spec:
  ingressClassName: nginx   # <-- use this instead of the deprecated annotation
  tls:
  - hosts:
    - www.vasavicafe.shop
    - vasavicafe.shop
    secretName: vasavicafe-tls
  rules:
  - host: vasavicafe.shop
    http:
      paths:
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 8000
      - path: /appointments
        pathType: Prefix
        backend:
          service:
            name: appointment-service
            port:
              number: 8000
      - path: /records
        pathType: Prefix
        backend:
          service:
            name: records-service
            port:
              number: 8000
      - path: /billing
        pathType: Prefix
        backend:
          service:
            name: billing-service
            port:
              number: 8000
      - path: /notifications
        pathType: Prefix
        backend:
          service:
            name: notification-service
            port:
              number: 8000
      - path: /inventory
        pathType: Prefix
        backend:
          service:
            name: inventory-service
            port:
              number: 8000
